--- a/event-bus/package.json
+++ b/event-bus/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "posts",
+  "name": "event-bus",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon posts.js"
+    "start": "nodemon event-bus.js"
   },
-  "author": "Manel Castro",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
-    "cors": "^2.8.5",
     "express": "^4.17.2",
     "nodemon": "^2.0.15"
   }
