--- a/infrastructure/k8s/posts-depl.yaml
+++ b/infrastructure/k8s/posts-depl.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
         - name: posts
-          image: microservices/posts:0.0.1
+          image: manelcastro/posts:latest
