--- a/ticketing/skaffold.yaml
+++ b/ticketing/skaffold.yaml
@@ -5,10 +5,13 @@ deploy:
     manifests:
       - ./infra/k8s/*
 build:
-  local:
-    push: false
+  # local:
+  #   push: false
+  googleCloudBuild:
+    projectId: ticketing-dev-359710
   artifacts:
-    - image: manelcastro/auth
+    # - image: manelcastro/auth (local)
+    - image: us.gcr.io/ticketing-dev-359710/auth
       context: auth
       docker:
         dockerfile: Dockerfile
