--- a/ticketing/auth/package.json
+++ b/ticketing/auth/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/tests/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -20,5 +28,13 @@
     "mongoose": "^6.5.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.7",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.3",
+    "mongodb-memory-server": "^8.8.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.8"
   }
 }
