--- a/ticketing/skaffold.yaml
+++ b/ticketing/skaffold.yaml
@@ -5,13 +5,13 @@ deploy:
     manifests:
       - ./infra/k8s/*
 build:
-  # local:
-  #   push: false
-  googleCloudBuild:
-    projectId: ticketing-dev-359710
+  local:
+    push: false
+  # googleCloudBuild:
+  #   projectId: ticketing-dev-359710
   artifacts:
-    # - image: manelcastro/auth (local)
-    - image: us.gcr.io/ticketing-dev-359710/auth
+    - image: manelcastro/auth
+      # - image: us.gcr.io/ticketing-dev-359710/auth
       context: auth
       docker:
         dockerfile: Dockerfile
@@ -19,7 +19,8 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
-    - image: us.gcr.io/ticketing-dev-359710/client
+    - image: manelcastro/client
+      # - image: us.gcr.io/ticketing-dev-359710/client
       context: client
       docker:
         dockerfile: Dockerfile
