--- a/ticketing/skaffold.yaml
+++ b/ticketing/skaffold.yaml
@@ -37,3 +37,12 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: manelcastro/orders
+      # - image: us.gcr.io/ticketing-dev-359710/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
