feat: add expiration module

--- a/ticketing/skaffold.yaml
+++ b/ticketing/skaffold.yaml
@@ -46,3 +46,12 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: manelcastro/expiration
+      # - image: us.gcr.io/ticketing-dev-359710/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
