--- a/ticketing/payments/package.json
+++ b/ticketing/payments/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mcreservations/common": "^1.0.11",
+    "@mcreservations/common": "^1.0.13",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^11.8.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
