--- a/ticketing/client/package.json
+++ b/ticketing/client/package.json
@@ -4,22 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
     "test": "echo \"Error: no test specified\" && exit 1",
-
     "dev": "next"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-
-
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
-
     "next": "^12.2.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
