--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -13,3 +13,9 @@ jobs:
     steps: 
       - uses: actions/checkout@v2 #checkout all the code inside repo 
       - run: cd ticketing/auth && docker build -t manelcastro/auth
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
+        env:  
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          #https://docs.docker.com/docker-hub/access-tokens/
+      - run: docker push manelcastro/auth
