--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2 #checkout all the code inside repo 
-      - run: cd ticketing/auth && docker build -t manelcastro/auth
+      - run: cd ticketing/auth && docker build -t manelcastro/auth .
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
         env:  
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
