--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -19,3 +19,8 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           #https://docs.docker.com/docker-hub/access-tokens/
       - run: docker push manelcastro/auth
+      - uses: digitalocean/action-doctl@v2 # installs doctl
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+      - run: doctl kubernetes cluster kubeconfig save ticketing # connects to our cluster so that we can run commands with kubectl into digital ocean
+      - run: kubectl rollout restart deployment auth-depl # reach that cluster and tell to restart (refetch image) 
