--- a/ticketing/infra/k8s/tickets-mongo-depl.yaml
+++ b/ticketing/infra/k8s/tickets-mongo-depl.yaml
@@ -12,9 +12,17 @@ spec:
       labels:
         app: tickets-mongo
     spec:
+      volumes:
+        - name: tickets-mongo-storage
+          persistentVolumeClaim:
+            claimName: tickets-db-pvc
       containers:
         - name: tickets-mongo
           image: mongo
+          volumeMounts:
+            - name: tickets-mongo-storage
+              mountPath: /data/db
+
 ---
 apiVersion: v1
 kind: Service
