--- a/ticketing/infra/k8s-prod/ingress-srv.yaml
+++ b/ticketing/infra/k8s-prod/ingress-srv.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   rules:
     # This will change:
-    - host: ticketing.dev
+    - host: www.indive.info
       http:
         paths:
           - path: /api/payments/?(.*)
