--- a/ticketing/infra/k8s-prod/ingress-srv.yaml
+++ b/ticketing/infra/k8s-prod/ingress-srv.yaml
@@ -69,11 +69,11 @@ spec:
     - name: http
       port: 80
       protocol: TCP
-      targetPort: 3000
+      targetPort: http
     - name: https
       port: 443
       protocol: TCP
-      targetPort: 3000
+      targetPort: https
   selector:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
