--- a/ticketing/infra/k8s-prod/ingress-srv.yaml
+++ b/ticketing/infra/k8s-prod/ingress-srv.yaml
@@ -47,34 +47,42 @@ spec:
                 port:
                   number: 3000
 ---
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
+  name: hello
   annotations:
-    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
+    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "1234-5678-9012-3456"
+    service.beta.kubernetes.io/do-loadbalancer-protocol: "https"
+    # Uncomment once hello.example.com points to the external IP address of the DO load-balancer.
     service.beta.kubernetes.io/do-loadbalancer-hostname: "www.indive.info"
-  labels:
-    helm.sh/chart: ingress-nginx-2.0.3
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 1.25.4
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/component: controller
-  name: ingress-nginx-controller
-  namespace: ingress-nginx
 spec:
   type: LoadBalancer
-  externalTrafficPolicy: Local
-  ports:
-    - name: http
-      port: 80
-      protocol: TCP
-      targetPort: http
-    - name: https
-      port: 443
-      protocol: TCP
-      targetPort: https
   selector:
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/component: controller
+    app: hello
+  ports:
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 80
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: hello
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: hello
+  template:
+    metadata:
+      labels:
+        app: hello
+    spec:
+      containers:
+        - name: hello
+          image: snormore/hello
+          ports:
+            - containerPort: 80
+              protocol: TCP
